[metadata]
name = reserve
version = 0.1
summary = Server toolkit. Redesigned.
download_url = UNKNOWN
author = Janusz Lewandowski
author_email = lew21@enves.pl
classifier = License :: OSI Approved :: BSD License
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Operating System :: POSIX
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Topic :: Internet :: WWW/HTTP :: HTTP Server
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
	Topic :: Internet :: WWW/HTTP :: WSGI :: Server
requires-dist =
	fdsocket

[files]
packages = reserve
